massive css refactor to avoid using position everywhere because of a flex issue, now using overflow: hidden; on main and many things are automagically taken care of by CSS as it is supposed to (no need for hacks)

--- a/src/styles/dark-theme.less
+++ b/src/styles/dark-theme.less
@@ -53,13 +53,13 @@
 	background-color: @onahau;
 }
 
-#app.dark .text-container p {
+#app.dark .text {
 	color: @onahau;
 	box-shadow: 0 0 20px 4px @charcoal;
 	background: linear-gradient(to bottom right, fade(@onahau, 20), fade(@onahau, 40));
 }
 
-#app.dark .highlights ul li {
+#app.dark .highlights li {
 	background-color: @onahau;
 	color: @midnight;
 	box-shadow: 6px 4px 6px 0 fade(@onahau, 30);
@@ -71,7 +71,7 @@
 		background-color: fade(@midnight, 75);
 	}
 
-	#app.dark .text-container p {
+	#app.dark .text {
 		color: @midnight;
 		background: linear-gradient(to bottom right, fade(@onahau, 60), fade(@onahau, 90));
 	}
