--- a/src/styles/light-theme.less
+++ b/src/styles/light-theme.less
@@ -47,13 +47,13 @@
 	background-color: @midnight;
 }
 
-#app.light .text-container p {
+#app.light .text {
 	color: @midnight;
 	box-shadow: 0 0 20px 0 fade(@midnight, 30);
 	background: linear-gradient(to bottom right, fade(@midnight, 20), fade(@midnight, 40));
 }
 
-#app.light .highlights ul li {
+#app.light .highlights li {
 	background-color: white;
 	color: @midnight;
 	box-shadow: 6px 4px 6px 0 fade(@midnight, 30);
@@ -65,7 +65,7 @@
 		background-color: fade(@onahau, 90);
 	}
 
-	#app.light .text-container p {
+	#app.light .text {
 		color: @onahau;
 		background: linear-gradient(to bottom right, fade(@midnight, 70), fade(@midnight, 90));
 	}
